--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "express-validator": "^7.2.0",
-    "mongoose": "^8.7.2",
-    "mongoose-auto-increment": "^5.0.1"
+    "mongoose": "^8.7.2"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
